--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>odtr.app</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway:200i,400 | Sacramento" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200i,400|Sacramento|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
